--- a/api/喷带.md
+++ b/api/喷带.md
@@ -32,7 +32,11 @@ url：
 - ribbonTypeId: Int 材质id
 - ribbonTypeName: String 材质名称
 - ribbonWidth: Int 带材宽度 30mm
-- list: JSONArray 本炉开包信息的数组，存放多次开包的记录
+- meltOutWeight: Int 放钢重量
+- rawWeight: Int 大盘毛重
+- isChangeTundish: String 是否换包：是、否
+- remark: String 备注
+- record: JSONArray 本炉开包信息的数组，存放多次开包的记录
     - nozzleSize: String 喷嘴规格 30*0.25
     - caster: String 喷带手
     - heatCupNum: Int 加热杯使用个数
@@ -54,11 +58,6 @@ url：
     - coilTimes: Int 卷取次数
     - castTimeEnd: String "2018-12-12 12:12:00" 喷带结束时间
     - describe: String 喷带结果描述
-    - meltOutWeight: Int 放钢重量
-    - rawWeight: Int 大盘毛重
-    - isChangeTundish: String 是否换包：是、否
-    - remark: String 备注
-
 
 ## 修改喷带记录
 
