--- a/api/生产计划.md
+++ b/api/生产计划.md
@@ -22,21 +22,25 @@ url：
   "status": 0,
   "message": "查询成功",
   "data": {
-    "date": "2018-12-12",
-    "castId": 6, // 机组编号
-    "team": "早",// 班组
-    "taskOrder": "备库", //任务单号
-    "ribbonTypeId": 1,
-    "ribbonTypeName": "1k107B",
-    "client": "备库", //客户
-    "thickness": "23-24", //带材厚度要求
-    "laminationFactor": "> 0.80", // 叠片系数的要求
-    "furnace": "06-20181120-01/01", //制带炉号
-    "alloyWeight": 230, // 单炉投入重量
-    "castTime": "8:00-10:00", //计划喷带时间
-    "rawWeight": 180, // 实际产出的大盘毛重
-    "remark": "计划喷带12炉，如果有富余时间喷带按照当天最后一炉规定的要求生产。",
-    "fileNumber": "QEHAT-FJ/D-C03-036-C/0" //文件编号
+    "list": [
+      {
+        "date": "2018-12-12",
+        "castId": 6, // 机组编号
+        "team": "早",// 班组
+        "taskOrder": "备库", //任务单号
+        "ribbonTypeId": 1,
+        "ribbonTypeName": "1k107B",
+        "client": "备库", //客户
+        "thickness": "23-24", //带材厚度要求
+        "laminationFactor": "> 0.80", // 叠片系数的要求
+        "furnace": "06-20181120-01/01", //制带炉号
+        "alloyWeight": 230, // 单炉投入重量
+        "castTime": "8:00-10:00", //计划喷带时间
+        "rawWeight": 180, // 实际产出的大盘毛重
+        "remark": "计划喷带12炉，如果有富余时间喷带按照当天最后一炉规定的要求生产。",
+        "fileNumber": "QEHAT-FJ/D-C03-036-C/0" //文件编号
+      }
+    ]
   }
 }
 ```
@@ -59,6 +63,7 @@ url：
 - "taskOrder": "备库"  任务单号
 - "ribbonTypeId": 1 
 - "ribbonTypeName": "1k107B" 
+- "ribbonWidth": 30 带宽 mm
 - "client": "备库"  客户
 - "thickness": "23-24"  带材厚度要求
 - "laminationFactor": "> 0.80"   叠片系数的要求
@@ -96,6 +101,7 @@ url：
 - "taskOrder": "备库"  任务单号
 - "ribbonTypeId": 1 
 - "ribbonTypeName": "1k107B" 
+- "ribbonWidth": 30 带宽 mm
 - "client": "备库"  客户
 - "thickness": "23-24"  带材厚度要求
 - "laminationFactor": "> 0.80"   叠片系数的要求
