--- a/api/生产计划.md
+++ b/api/生产计划.md
@@ -105,7 +105,7 @@ url：
 - "client": "备库"  客户
 - "thickness": "23-24"  带材厚度要求
 - "laminationFactor": "> 0.80"   叠片系数的要求
-- "furnace": "06-20181120-01/01"  制带炉号
+- "furnace": "06-20181120-01"  制带炉号
 - "alloyWeight": 230   单炉投入重量
 - "castTime": "8:00-10:00"  计划喷带时间
 - "rawWeight": 180  实际产出的大盘毛重
