--- a/api/用户管理.md
+++ b/api/用户管理.md
@@ -24,6 +24,28 @@ url:
 }
 ```
 
+## 删除用户
+
+方法：
+
+> delete
+
+url: 
+
+> /user
+
+参数：
+
+- username: 用户名
+
+返回值:
+
+```js
+{
+  status: 0,
+  message: '删除成功'
+}
+
 ## 修改密码
 
 方法：
