--- a/api/用户管理.md
+++ b/api/用户管理.md
@@ -1,5 +1,42 @@
 # 用户管理
 
+## 获取用户列表
+
+方法：
+
+> get
+
+url: 
+
+> /user
+
+参数：
+
+- roleId: 1 只有超级管理员才能查询所有用户列表
+
+返回值:
+
+```js
+{
+  status: 0,
+  message: '查询成功',
+  data: {
+    list: [
+       {
+        roleId: 1,
+        username: 'super',
+        password: '123456'
+      },
+      {
+        roleId: 2,
+        username: 'admin',
+        password: '123456'
+      }
+    ]
+  }
+}
+```
+
 ## 新增用户
 
 方法：
