--- a/api/化钢.md
+++ b/api/化钢.md
@@ -30,6 +30,7 @@ url：
     "limit": 10, //每页显示的记录数
     "list": [
       {
+        "date": "2019-01-20", //冶炼日期
         "castId": 6,// 机组编号
         "furnace": "06-20181120-01/01",// 制带炉号 
         "ribbonTypeId": 1,//材质id
