--- a/api/化钢.md
+++ b/api/化钢.md
@@ -14,6 +14,9 @@ url：
 
 - castId：机组编号 6-6号机组, 7-7号机组, 8-8号机组, 9-9号机组
 - current: 当前页码
+- startTime: 开始时间 可选
+- endTime: 结束时间 可选 
+- melter: 化钢人 可选
 
 返回值:
 
@@ -54,7 +57,9 @@ url：
         "alloyTotalWeight": 200,//总重量
         "alloyOutWeight": 20,//放钢重量
         "alloyFixWeight": -20,// 总重量修正
-        "remark":  "备注"
+        "remark":  "备注",
+        "createdAt": "", //创建时间
+        "updatedAt": "" //更新时间
       }
     ]
   }
