--- a/api/喷带.md
+++ b/api/喷带.md
@@ -53,6 +53,7 @@ url：
                 "nozzleNum": 1, //喷嘴数量
                 "heatCupNum": 1, //加热杯数量
                 "treatCoolRoller": "左", //冷却辊处理方式 左中右
+                "coolRollerThickness": 15, //铜套厚度
                 "ReceiveMeltTime": "22:00", //接钢时间
                 "tundishTemperatureWithoutMelt": 1350, //接钢前温度 摄氏度
                 "tundishTemperatureWithMelt": 1330, // 接钢后包温 摄氏度
