--- a/api/化钢.md
+++ b/api/化钢.md
@@ -154,3 +154,27 @@ url：
   "status": 0,
   "message": "操作成功"
 }
+```
+
+## 删除化钢记录
+
+方法：
+
+> delete
+
+url：
+
+> /melt
+
+参数：
+
+- _id: 唯一性id
+
+返回值：
+
+```js
+{
+  "status": 0,
+  "message": "操作成功"
+}
+```
