--- a/api/检测.md
+++ b/api/检测.md
@@ -47,23 +47,23 @@ url：
         "laminationLevel": 3, //叠片等级
         // 检测录入信息
         "realRibbonWidth": 29.9,//实际带宽, mm
-        "ribbenThickness1": 22, //带材厚度点1, μm
-        "ribbenThickness2": 23, //带材厚度点2, μm
-        "ribbenThickness3": 22, //带材厚度点3, μm
-        "ribbenThickness4": 23, //带材厚度点4, μm
-        "ribbenThickness5": 22, //带材厚度点5, μm
-        "ribbenThickness6": 23, //带材厚度点6, μm
-        "ribbenThickness7": 22, //带材厚度点7, μm
-        "ribbenThickness8": 22, //带材厚度点8, μm
-        "ribbenThickness9": 24, //带材厚度点9, μm
-        "ribbenThicknessDeviation": 2, // 带材横向最大偏差, μm
-        "ribbenThickness": 23, // 带材平均厚度, μm
-        "ribbenThicknessLevel": 2, // 带材厚度级别
-        "ribbenToughness": "好", //带材韧性
-        "ribbenToughnessLevel": "A", //带材韧性等级
+        "ribbonThickness1": 22, //带材厚度点1, μm
+        "ribbonThickness2": 23, //带材厚度点2, μm
+        "ribbonThickness3": 22, //带材厚度点3, μm
+        "ribbonThickness4": 23, //带材厚度点4, μm
+        "ribbonThickness5": 22, //带材厚度点5, μm
+        "ribbonThickness6": 23, //带材厚度点6, μm
+        "ribbonThickness7": 22, //带材厚度点7, μm
+        "ribbonThickness8": 22, //带材厚度点8, μm
+        "ribbonThickness9": 24, //带材厚度点9, μm
+        "ribbonThicknessDeviation": 2, // 带材横向最大偏差, μm
+        "ribbonThickness": 23, // 带材平均厚度, μm
+        "ribbonThicknessLevel": 2, // 带材厚度级别
+        "ribbonToughness": "好", //带材韧性
+        "ribbonToughnessLevel": "A", //带材韧性等级
         "appearence": "带面光亮，无明显缺陷", //带材外观
         "appearenceLevel": "B", //带材外观等级
-        "ribbenTotalLevel": "32AB", //带材综合级别
+        "ribbonTotalLevel": "32AB", //带材综合级别
         "storageRule": "入库规则", //入库规则
         "isStored": 1, // 是否入库，1-是，0-否
         "clients": "德国，法国" //去向 德国，法国
@@ -125,23 +125,23 @@ url：
 - laminationLevel: Number, //叠片等级 1, 2, 3, 4
 
 - realRibbonWidth: Number,//实际带宽
-- ribbenThickness1: Number, //带材厚度点1, μm
-- ribbenThickness2: Number, //带材厚度点2, μm
-- ribbenThickness3: Number, //带材厚度点3, μm
-- ribbenThickness4: Number, //带材厚度点4, μm
-- ribbenThickness5: Number, //带材厚度点5, μm
-- ribbenThickness6: Number, //带材厚度点6, μm
-- ribbenThickness7: Number, //带材厚度点7, μm
-- ribbenThickness8: Number, //带材厚度点8, μm
-- ribbenThickness9: Number, //带材厚度点9, μm
-- ribbenThicknessDeviation: Number, // 带材横向偏差, μm
-- ribbenThickness: Number, // 带材平均厚度, μm
-- ribbenThicknessLevel: Number, // 带材厚度级别
-- ribbenToughness: String, //带材韧性
-- ribbenToughnessLevel: String, //带材韧性等级
+- ribbonThickness1: Number, //带材厚度点1, μm
+- ribbonThickness2: Number, //带材厚度点2, μm
+- ribbonThickness3: Number, //带材厚度点3, μm
+- ribbonThickness4: Number, //带材厚度点4, μm
+- ribbonThickness5: Number, //带材厚度点5, μm
+- ribbonThickness6: Number, //带材厚度点6, μm
+- ribbonThickness7: Number, //带材厚度点7, μm
+- ribbonThickness8: Number, //带材厚度点8, μm
+- ribbonThickness9: Number, //带材厚度点9, μm
+- ribbonThicknessDeviation: Number, // 带材横向偏差, μm
+- ribbonThickness: Number, // 带材平均厚度, μm
+- ribbonThicknessLevel: Number, // 带材厚度级别
+- ribbonToughness: String, //带材韧性
+- ribbonToughnessLevel: String, //带材韧性等级
 - appearence: String, //带材外观
 - appearenceLevel: String, //带材外观等级
-- ribbenTotalLevel: String, //带材综合级别
+- ribbonTotalLevel: String, //带材综合级别
 - storageRule: String, //入库规则
 - isStored: Number, // 是否入库，1-是，0-否
 - clients: String //去向 德国，法国
