--- a/api/材质.md
+++ b/api/材质.md
@@ -8,7 +8,7 @@
 
 url：
 
-> /ribbontype
+> /ribbonType
 
 参数：
 
@@ -29,7 +29,7 @@ url：
 
 url：
 
-> /ribbontype
+> /ribbonType
 
 参数：
 
@@ -100,7 +100,7 @@ url：
 
 url：
 
-> /ribbontype
+> /ribbonType
 
 参数：
 
@@ -123,7 +123,7 @@ url：
 
 url：
 
-> /ribbontype
+> /ribbonType
 
 参数：
 
@@ -146,7 +146,7 @@ url：
 
 url：
 
-> /ribbontype
+> /ribbonType
 
 参数：
 
